vlib/v/parser/tests/struct_embed_wrong_pos_in_pub_err.vv
struct Log {}
struct Xyz {}

pub struct ThreadSafeLog {
pub:
    Log
pub mut:
    mu Xyz
}

fn main() {}
